tests/baselines/reference/exportEqualsClassRedeclarationError.errors.txt
exportEqualsClassRedeclarationError.ts(2,16): error TS2300: Duplicate identifier 'someProp'.
exportEqualsClassRedeclarationError.ts(6,16): error TS2300: Duplicate identifier 'someProp'.
exportEqualsClassRedeclarationError.ts(7,16): error TS2300: Duplicate identifier 'someProp'.


==== exportEqualsClassRedeclarationError.ts (3 errors) ====
    class SomeClass {
        static get someProp(): number {
                   ~~~~~~~~
!!! error TS2300: Duplicate identifier 'someProp'.
            return 0;
        }
    
        static set someProp(value: number) {}
                   ~~~~~~~~
!!! error TS2300: Duplicate identifier 'someProp'.
        static set someProp(value: number) {}
                   ~~~~~~~~
!!! error TS2300: Duplicate identifier 'someProp'.
    }
    export = SomeClass;